# dosbox

./: configure.ac
src/: Makefile.am  dosbox.cpp
src/hardware/: Makefile.am  ibmmfc.cpp
src/hardware/fmgen/: Makefile.am
src/hardware/z80ex/: Makefile.am  Makefile.in
