ENDIANNESS := WORDS_LITTLE_ENDIAN
API_REVISION := 1
VERSION_MAJOR := 1
VERSION_MINOR := 18
RELEASE_TYPE := 
VERSION_STR := ${API_REVISION}.${VERSION_MAJOR}.${VERSION_MINOR}${RELEASE_TYPE}

AM_CPPFLAGS = -I$(srcdir)/include -D${ENDIANNESS} \
	-DZ80EX_VERSION_STR=${VERSION_STR} \
	-DZ80EX_API_REVISION=${API_REVISION} \
	-DZ80EX_VERSION_MAJOR=${VERSION_MAJOR} \
	-DZ80EX_VERSION_MINOR=${VERSION_MINOR} \
	-DZ80EX_RELEASE_TYPE=${RELEASE_TYPE}

noinst_LIBRARIES = libz80ex.a
libz80ex_a_SOURCES = z80ex.c \
	macros.h typedefs.h \
	include/z80ex_common.h include/z80ex.h
